--- a/教程.md
+++ b/教程.md
@@ -13,3 +13,6 @@ ROS2图是一个ROS2元素们同时处理数据的网络。
 2. Nodes in ROS2
 在ROS里每个node的用途,应该负责单一模块(列如一个node为控制轮电机，一个node为激光测距仪等等)。
 每个node能通过主题，服务，动作或参数向其它的node发送和接收数据。
+![Alt Text](http://docs.ros.org/en/galactic/_images/Nodes-TopicandService.gif) 
+一个完整的机器人系统由很多协同工作的node所组成。
+在ROS2中，一个单一可执行文件(C++程序，python程序等等)能容纳一个或多个node。
